[package]
name = "rust-learn-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenv = "0.15"
ctrlc-async = "3.2"
tower-cookies = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0.140"
ascii = "1.1.0"
